# blog-with-FastApi-and-MongoDB-ODM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.loadtest  Dockerfile.prod  README.md  common.env  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: cli.py  gunicorn_config.py  main.py
app/base/: base_class.py  config.py  config_utils.py  custom_types.py  exception_handler.py  exceptions.py  middleware.py  routers.py  types.py
app/base/tools/: cli.py
app/base/utils/: __init__.py  decorator.py  file.py  query.py  string.py
app/post/: models.py  utils.py
app/post/routers/: __init__.py  comments.py  posts.py  reactions.py
app/post/schemas/: comments.py  posts.py
app/post/services/: comment.py  post.py  reaction.py
app/tests/: config.py  conftest.py  data.py  endpoints.py  test_base.py  test_post.py  test_user.py  utils.py
app/tests/base/: test_base.py
app/tests/post/: helper.py  test_comments.py  test_posts.py  test_reactions.py  test_topics.py
app/tests/user/: helper.py  test_auth.py  test_user.py
app/user/: dependencies.py  models.py  routers.py  schemas.py  utils.py
app/user/services/: auth.py  token.py  user.py
cli/: main.py
cli/management_command/: data_population.py
docs/: monitoring.md  run-with-k8s.md
k8s/: example.env.properties  example.env.secrets
k8s/base/: backend.yaml  ingress.yaml  kustomization.yaml  mongo.yaml  namespace.yaml
k8s/overlays/dev/: ingress-patch.yaml  kustomization.yaml  mongo.yaml
k8s/overlays/prod/: backend-patch.yaml  kustomization.yaml
scripts/: format.sh  lint.sh  monitoring-dashboard.sh  test.sh
