# Project metadata
[project]
name = "blog-with-FastApi-and-MongoDB-ODM"
version = "1.0.0"
description = ""
authors = [{ name = "Nayan Biswas", email = "nayan32biswas@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

# Main dependencies as an array
dependencies = [
    "bcrypt>=4.1.2",
    "cryptography>=44.0.2",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "mongodb-odm>=1.0.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.0",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

# Optional dev dependencies
[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.10.4",
    "debugpy>=1.8.16",
    "Faker>=37.5.3",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "types-passlib>=1.7.7.20250602",
    "types-python-slugify>=8.0.2.20240310",
]

# Optional uv-specific configuration
[tool.uv]

[tool.uv.sources]
mongodb-odm = { git = "https://github.com/nayan32biswas/mongodb-odm", rev = "main" }
# constraint = "constraints.txt"

# Tool configurations
[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
omit = [
    "app/tests/**",
    "cli/**",
    "k8s/**",
    "scripts/**",
    "docs/**",
    "examples/**",
]

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-third-party = ["mongodb_odm", "pydantic", "fastapi"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
