# Project metadata
[project]
name = "blog-with-FastApi-and-MongoDB-ODM"
version = "1.0.0"
description = ""
authors = [{ name = "Nayan Biswas", email = "nayan32biswas@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

# Main dependencies as an array
dependencies = [
    "bcrypt>=4.1.2",
    "cryptography>=46.0.2",
    "fastapi>=0.120.0",
    "gunicorn>=23.0.0",
    "mongodb-odm>=1.1.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.0",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

# Local dev dependencies
[dependency-groups]
dev = [
    "coverage[toml]>=7.10.6",
    "debugpy>=1.8.16",
    "faker>=37.5.3",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
    "types-passlib>=1.7.7.20250602",
    "types-python-slugify>=8.0.2.20240310",
]

# Optional uv-specific configuration
[tool.uv]

# uv add git+https://github.com/nayan32biswas/mongodb-odm --branch main
[tool.uv.sources]
mongodb-odm = { git = "https://github.com/nayan32biswas/mongodb-odm", branch = "main" }

# Tool configurations
[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
omit = [
    "app/tests/**",
    "cli/**",
    "k8s/**",
    "scripts/**",
    "docs/**",
    "examples/**",
]

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.ty.rules]
redundant-cast = "ignore"
missing-argument = "ignore" # It was raising error for code """TopicOut(**dict_data)"""

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe complexity
    "E", # pycodestyle errors
    "F", # flake8
    "I", # isort
    "N", # pep8-naming
    "TC", # flake8-type-checking
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
ignore = ["B008", "N818"]

[tool.ruff.lint.isort]
known-third-party = ["mongodb_odm", "pydantic", "fastapi"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
